--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chess.js": "^0.10.3",
     "chessboardjsx": "^2.4.7",
     "react": "^19.1.1",
+    "react-chessboard": "^5.6.1",
     "react-dom": "^19.1.1",
     "stockfish": "^17.1.0"
   },
